@@ -7,6 +7,9 @@
     * The default value of Listen option is changed from 5 to -1.
     * "Blocking" option is removed from IO::Socket because socket is always non-blocking to work with goroutine.
     * Remove socketpair method in IO::Socket class.
+    * socket method in IO::Socket become protected, and the doc is removed.
+    * connect, listen, bind, accept methods in IO::Socket become protected, and the docs are removed.
+    
 0.211002 2023-12-07
   [Prerequirement Changes]
     * Require SPVM::Sys 0.510.
